2010-11-18 Riccardo Mottola

	* Modules/Editors/ProjectCenter/PCEditor.m:
	Init could return a different object, take it in account.
	
	* Framework/PCProjectEditor.m:
	Remove useless instruction and assignment.

	* Framework/PCProject.m:
	Fix memory leak.

	* Modules/Editors/ProjectCenter/PCEditor.m:
	Initialize range to ensure it does not contain garbage.

2010-11-16 German Arias <german@xelalug.org>
	* Framework/PCFileManager.m: Allow open .project directories
	to add files placed at project directory in AddFiles panel.

2010-11-05 German Arias <german@xelalug.org>
	* Modules/Projects/Application/PCAppProject.m: 
	(-createProjectAt:) Delete the extension on the	project 
	name to avoid file names like MyApp.project.plist
	and an ugly name of the app (MyApp.project) at info panel.

2010-08-10 Sergii Stoian <stoyan255@ukr.net>
	* Framework/PCProjectBrowser.m:
	(-nameOfSelectedCategory): Return 'nil' if name of subproject
	selected. Add comments.
	(-nameOfSelectedFile): Check if category is selected.
	(-click:): check if category is selected.

2010-07-31 Sergii Stoian <stoyan255@ukr.net>
	* Framework/PCProject.m:
	(-assignProjectDict:): Fix setting projectPath to project
	dir (not to *.pcproj dir).
	* Framework/PCFilemanager.m:
	(-filesOfTypes:operation:multiple:title:accView:): Set allowed
	file types to panel of types is not nil.
	(-panel:isValidFilename): Use set allowed file types to panel.

2010-07-30 Sergii Stoian <stoyan255@ukr.net>
	* Framework/PCProject.m:
	(-subprojectWithName:): Pass to openProjectAt: subproject dir.
	openProjectat: can now handle this situation.
	* Framework/PCProjectManager.m:
	(-openProjectAt:): Implement handling of 'aPath' argument as 
	project file and as project dir. Select *.pcproj if exists then
	try to load PC.project.
	(-openProject): Implement intelligent selection of project file
	when selected *.pcproj, PC.project or project dir.
	* Framework/PCFilemanager.m:
	(-filesOfTypes:operation:multiple:title:accView:): Remove code